# SketchToPlantUML

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: SketchToPlantUML.h
include/classify/: Classsify.h
include/segment/: Segment.h
include/text_detection/: TextDetection.h
include/transform/: Transform.h
include/util/: Color.h  Util.h
resources/templateMatch/: 1. arrow_rois.yml  1. text_rois.yml  10. arrow_rois.yml  10. text_rois.yml  11. arrow_rois.yml  11. star_rois.yml  11. text_rois.yml  12. arrow_rois.yml  12. text_rois.yml  13. arrow_rois.yml  13. text_rois.yml  14. arrow_rois.yml  14. text_rois.yml  15. arrow_rois.yml  15. text_rois.yml  16. arrow_rois.yml  16. text_rois.yml  17. arrow_rois.yml  17. text_rois.yml  18. arrow_rois.yml  18. text_rois.yml  19. arrow_rois.yml  19. text_rois.yml  2. arrow_rois.yml  2. star_rois.yml  2. text_rois.yml  20. arrow_rois.yml  20. text_rois.yml  21. arrow_rois.yml  21. text_rois.yml  22. arrow_rois.yml  22. text_rois.yml  23. star_rois.yml  23. text_rois.yml  24. star_rois.yml  24. text_rois.yml  25. star_rois.yml  25. text_rois.yml  26. star_rois.yml  26. text_rois.yml  (+110 more)
src/: SketchToPlantUML.cpp
src/classify/: Classify.cpp
src/segment/: Segment.cpp
src/text_detection/: TextDetection.cpp
src/transform/: Transform.cpp
src/util/: Color.cpp  Util.cpp
